--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="head-container">
         <div id="nav-bar">
             <a href="index.html">About</a>
-            <a href="">Projects</a>
+            <a href="https://dhavalv3rma.github.io/frontlab/">Projects</a>
             <a href="">Contact</a>
         </div>
     </header>
