--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Dhaval Verma - front-end designer/developer</title>
+    <script src="//code.tidio.co/gxrm9cvkeaowfwskcam9iwikb91qlzxv.js" async></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/fav.ico">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
