--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dhaval Verma - front-end designer/developer</title>
     <script src="//code.tidio.co/gxrm9cvkeaowfwskcam9iwikb91qlzxv.js" async></script>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/fav.ico">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
@@ -20,6 +22,8 @@
                     <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
                     <a href="http://www.boltztrade.com" target="_blank">Boltztrade</a>
                     <a href="https://www.optionmatrix.com/" target="_blank">Option Matrix</a>
+                    <br>
+                    <p>--------Wordpress--------</p>
                     <a href="https://www.permishare.com/" target="_blank">Permishare</a>
                     <a href="https://elifx.com/" target="_blank">Elite Strategies</a>
                     <a href="https://tendaindex.com/" target="_blank">Tenda Index</a>
@@ -30,9 +34,9 @@
         </div>
     </header>
 
-    <div class="top-container">
+    <div data-aos="zoom-out" class="top-container">
         <h1>I'm Dhaval</h1>
-        <p id="life">a <span>web</span> designer</p>
+        <p id="life">Frontend Developer</p>
         <img class="mnt" src="images/mountains.png" alt="mountain-image">
     </div>
 
@@ -40,7 +44,9 @@
         <img class="user_pic " src="images/dt.jpg" alt="dhaval_image">
         <h2>Hi</h2>
         <div class="insight">
-            <p>I'm a front-end designer/developer based in Hyderabad, India. I have a passion for web designing and love to create for web. </p>
+            <p>Experienced developer with a demonstrated history of working in web development.
+                Skilled in HTML, CSS, JavaScript, jQuery, Bootstrap, Wordpress, Wireframes and responsive design.
+                <br><br> I have a passion for web designing and love to create for web. </p>
         </div>
         <hr>
     </div>
@@ -48,23 +54,27 @@
     <div class="bottom-container">
         <h2>What I can do</h2>
         <div id="images">
-            <img src="images/html.png" class="icons" alt="web_technologies">
-            <img src="images/css.png" class="icons" alt="">
-            <img src="images/js.png" class="icons" alt=""><br>
-            <img src="images/bstrap.png" class="icons" alt="">
-            <img src="images/jquery.png" class="icons_jq" alt="">
+            <img title="Html" src="images/html.png" class="tooltip icons" alt="web_technologies">
+            <img title="Css" src="images/css.png" class="icons" alt="">
+            <img title="Javascript" src="images/js.png" class="icons" alt=""><br>
+            <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="">
+            <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt=""><br>
+            <img title="jQuery" src="images/jquery.png" class="icons_jq" alt="">
         </div>
     </div>
 
     <footer>
         <div class="foot-container" id="footer">
-            <a href="mailto:dhavalverma@live.com" class="email-lnk">Hire me</a>
-            <p>© <span id="year"></span> <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" target="_blank">Dhaval Verma</a>. All rights reserved.</p>
+            <a data-aos="zoom-out" href="mailto:dhavalverma@live.com" class="email-lnk">Hire me</a>
+            <p data-aos="zoom-out">© <span id="year"></span> <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" target="_blank">Dhaval Verma</a>. All rights reserved.</p>
         </div>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
+
     <script>
+        AOS.init();
         $(".dropdown").on('click', function() {
             $(".dropdown-content").addClass("croto");
         });
@@ -75,6 +85,7 @@
         $('#year').text(x);
 
     </script>
+
 </body>
 
 </html>
