--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
 
     <footer>
         <div class="foot-container" id="footer">
-            <a data-aos="zoom-out" href="mailto:dhavalverma@live.com" class="email-lnk">Hire me</a>
-            <p data-aos="zoom-out">© <span id="year"></span> <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" target="_blank">Dhaval Verma</a>. All rights reserved.</p>
+            <a href="mailto:dhavalverma@live.com" class="email-lnk">Hire me</a>
+            <p>© <span id="year"></span> <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" target="_blank">Dhaval Verma</a>. All rights reserved.</p>
         </div>
     </footer>
 
