--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <img title="Css" src="images/css.png" class="icons" alt="">
             <img title="Javascript" src="images/js.png" class="icons" alt=""><br>
             <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="">
-            <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt=""><br>
+            <img title="Wordpress" src="images/wp.png" class="icons" alt=""><br>
             <img title="jQuery" src="images/jquery.png" class="icons_jq" alt="">
         </div>
     </div>
