--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </div>
 
     <div class="middle-container" id="about">
-        <img class="user_pic " src="images/dt.jpg" alt="dhaval_image">
+        <img class="user_pic " src="images/dt.png" alt="dhaval_image">
         <h2>Hi</h2>
         <div class="insight">
             <p>Experienced developer with a demonstrated history of working in web development.
