--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
             <a href="#about">About</a>
             <div class="dropdown"><span>Projects</span>
                 <div class="dropdown-content">
-                    <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
-                    <a href="http://www.boltztrade.com" target="_blank">Boltztrade</a>
                     <a href="https://www.optionmatrix.com/" target="_blank">Option Matrix</a>
+                    <a href="https://www.dubaidryfruits.in/" target="_blank">Dubai Dry Fruits</a>
+                    <a href="http://www.boltztrade.com" target="_blank">Boltztrade</a>
+                    <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
                     <br>
                     <p>--------Wordpress--------</p>
                     <a href="https://www.permishare.com/" target="_blank">Permishare</a>
