--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
                     <a href="https://www.optionmatrix.com/" target="_blank">Option Matrix</a>
                     <a href="https://www.dubaidryfruits.in/" target="_blank">Dubai Dry Fruits</a>
                     <a href="http://www.boltztrade.com" target="_blank">Boltztrade</a>
-                    <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
                     <br>
                     <p>--------Wordpress--------</p>
                     <a href="https://www.permishare.com/" target="_blank">Permishare</a>
                     <a href="https://elifx.com/" target="_blank">Elite Strategies</a>
                     <a href="https://tendaindex.com/" target="_blank">Tenda Index</a>
                     <a href="https://precision-4x.com/" target="_blank">Precision4x</a>
+                    <br>
+                    <p>--------Extras--------</p>
+                    <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
+                    <a href="https://dhavalv3rma.github.io/tictactoe/" target="_blank">Tictactoe</a>
                 </div>
             </div>
             <a href="#footer">Contact</a>
