--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     </section>
     <footer>
         <div class="foot-container" id="footer">
-            <a href="mailto:dhavalverma@live.com" class="email-lnk glow">Hire me</a>
+            <a href="mailto:dhavalverma@live.com" class="email-lnk glow">Contact me</a>
             <p>© <span id="year"></span> <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval Verma</a>. All rights reserved.</p>
         </div>
     </footer>
