--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
                 <h4>--------OTHER SKILLS--------</h4>
                 <div class="flex-container">
                     <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="">
+                    <img title="Shopify" src="images/shopify.svg" class="icons" alt="">
                     <img title="Photoshop" src="images/ps.png" class="icons" alt="">
                     <img title="XD" src="images/xd.png" class="icons" alt="">
                 </div>
