--- a/index.html
+++ b/index.html
@@ -71,10 +71,14 @@
                     <img title="Angular" src="images/angular.png" class="icons" alt="">
                     <img title="jQuery" src="images/jq.png" class="icons" alt="">
                 </div>
-                <h4>--------OTHER SKILLS--------</h4>
+                <h4>--------CMS--------</h4>
                 <div class="flex-container">
                     <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="">
                     <img title="Shopify" src="images/shopify.svg" class="icons" alt="">
+                    <img title="SquareSpace" src="images/squarespace.png" class="icons" alt="">
+                </div>
+                <h4>--------OTHER SKILLS--------</h4>
+                <div class="flex-container">
                     <img title="Photoshop" src="images/ps.png" class="icons" alt="">
                     <img title="XD" src="images/xd.png" class="icons" alt="">
                 </div>
