--- a/index.html
+++ b/index.html
@@ -25,8 +25,9 @@
                     <p>--------Wordpress--------</p>
                     <a href="https://www.permishare.com/" target="_blank">Permishare</a>
                     <a href="https://elifx.com/" target="_blank">Elite Strategies</a>
-                    <a href="https://tendaindex.com/" target="_blank">Tenda Index</a>
-                    <a href="https://precision-4x.com/" target="_blank">Precision4x</a>
+                    <a href="https://cpcprojects.in/" target="_blank">CPC Projects</a>
+                    <a href="https://ricsmagroup.com/" target="_blank">Ricsmagroup</a>
+                    <a href="https://axelprivatemarket.com/" target="_blank">AxelPrivateMarket</a>
                     <br>
                     <p>--------Extras--------</p>
                     <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
@@ -90,7 +91,7 @@
     <footer>
         <div class="foot-container" id="footer">
             <a href="mailto:dhavalverma@live.com" class="email-lnk glow">Contact me</a>
-            <p>© <span id="year"></span> All rights reserved. 
+            <p>© <span id="year"></span> All rights reserved. Dhaval Verma
 <!--<a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval Verma</a>.</p> -->
         </div>
     </footer>
