--- a/index.html
+++ b/index.html
@@ -8,33 +8,28 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="images/fav.ico">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
 <body>
     <header class="head-container">
         <div id="nav-bar">
-            <a class="glow" href="#about">About</a>
-            <div class="dropdown glow"><span>Projects</span>
+            <a class="link" href="#about">About</a>
+            <div class="dropdown link"><span>Projects</span>
                 <div class="dropdown-content">
                     <a href="https://www.optionmatrix.com/" target="_blank">Option Matrix</a>
-                    <a href="https://www.dubaidryfruits.in/" target="_blank">Dubai Dry Fruits</a>
-                    <a href="http://www.boltztrade.com" target="_blank">Boltztrade</a>
-                    <br>
-                    <p>--------Wordpress--------</p>
-                    <a href="https://www.permishare.com/" target="_blank">Permishare</a>
-                    <a href="https://elifx.com/" target="_blank">Elite Strategies</a>
-                    <a href="https://cpcprojects.in/" target="_blank">CPC Projects</a>
                     <a href="https://ricsmagroup.com/" target="_blank">Ricsmagroup</a>
                     <a href="https://axelprivatemarket.com/" target="_blank">AxelPrivateMarket</a>
-                    <br>
-                    <p>--------Extras--------</p>
+                    <a href="https://cpcprojects.in/" target="_blank">CPC Projects</a>
+                    <a href="https://www.permishare.com/" target="_blank">Permishare</a>
+                    <p>--------Xtras--------</p>
                     <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
                     <a href="https://dhavalv3rma.github.io/tictactoe/" target="_blank">Tictactoe</a>
                 </div>
             </div>
-            <a class="glow" href="#footer">Contact</a>
+            <a class="link" href="#footer">Contact</a>
         </div>
     </header>
 
@@ -50,8 +45,10 @@
             <h2>Hi</h2>
             <div class="insight">
                 <p>I am an Experienced developer with a demonstrated history of working in web development.
-                    Skilled in HTML, CSS(+Sass), JavaScript, jQuery, Angular, Bootstrap, Wordpress, Wireframes, responsive designs and many more.
-                    <br><br> I have a passion for web development and love to create for web. </p>
+                    Skilled in HTML, CSS(+Sass), JavaScript, jQuery, Angular, Bootstrap, TailWind, Wordpress,
+                    Wireframes, responsive designs and many more.
+                    <br><br> I have a passion for web development and love to create for web.
+                </p>
             </div>
             <hr>
         </div>
@@ -60,28 +57,36 @@
             <h2>What I can do</h2>
 
             <div id="images">
+                <h4>--------LANGUAGES--------</h4>
                 <div class="flex-container">
-                    <img title="Html" src="images/html.png" class="tooltip icons" alt="web_technologies">
-                    <img title="Css" src="images/css.png" class="icons" alt="">
-                    <img title="Javascript" src="images/js.png" class="icons" alt="">
+                    <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
+                    <img title="Css" src="images/css.png" class="icons" alt="Css">
+                    <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
                 </div>
                 <h4>--------FRAMEWORKS & LIBRARIES--------</h4>
                 <div class="flex-container">
-                    <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="">
-                    <img title="Sass" src="images/sass.png" class="icons" alt="">
-                    <img title="Angular" src="images/angular.png" class="icons" alt="">
-                    <img title="jQuery" src="images/jq.png" class="icons" alt="">
+                    <img title="Angular" src="images/angular.png" class="icons" alt="Angular">
+                    <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
+                    <img title="Sass" src="images/sass.png" class="icons" alt="Sass">
+                    <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
+                    <img title="TailWind" src="images/tWind.png" class="icons" alt="TailWind">
                 </div>
                 <h4>--------CMS--------</h4>
                 <div class="flex-container">
-                    <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="">
-                    <img title="Shopify" src="images/shopify.svg" class="icons" alt="">
-                    <img title="SquareSpace" src="images/squarespace.png" class="icons" alt="">
+                    <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="Wordpress">
+                    <img title="Shopify" src="images/shopify.svg" class="icons" alt="Shopify">
+                    <img title="SquareSpace" src="images/squarespace.png" class="icons" alt="SquareSpace">
+                </div>
+                <h4>--------DIGITAL MARKETING--------</h4>
+                <div class="flex-container">
+                    <img title="Analytics" src="images/analytics.png" class="icons" alt="Analytics">
+                    <img title="TagManager" src="images/gtm.png" class="icons" alt="Tagmanager">
                 </div>
                 <h4>--------OTHER SKILLS--------</h4>
                 <div class="flex-container">
-                    <img title="Photoshop" src="images/ps.png" class="icons" alt="">
-                    <img title="XD" src="images/xd.png" class="icons" alt="">
+                    <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
+                    <img title="Photoshop" src="images/ps.png" class="icons" alt="Photoshop">
+                    <img title="XD" src="images/xd.png" class="icons" alt="XD">
                 </div>
 
             </div>
@@ -90,26 +95,28 @@
     </section>
     <footer>
         <div class="foot-container" id="footer">
-            <a href="mailto:dhavalverma@live.com" class="email-lnk glow">Contact me</a>
+            <a href="mailto:dhavalverma@live.com" class="email-lnk link">Contact me</a>
             <p>© <span id="year"></span> All rights reserved. Dhaval Verma
-<!--<a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval Verma</a>.</p> -->
+                <!--<a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval Verma</a>. -->
+            </p>
         </div>
     </footer>
 
-    <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <script>
         AOS.init();
-        $(".dropdown").on('click', function() {
+        $(".dropdown").on('click', function () {
             $(".dropdown-content").toggleClass("show hide");
         });
 
-        $("section").on("click", function() {
+        $("section").on("click", function () {
             $(".dropdown-content").removeClass("show");
         });
 
-        $(".dropdown-content").on("mouseleave", function() {
+        $(".dropdown-content").on("mouseleave", function () {
             $(".dropdown-content").removeClass("show");
         });
 
@@ -118,4 +125,6 @@
         $('#year').text(x);
     </script>
 
-</body></html>
+</body>
+
+</html>
