--- a/index.html
+++ b/index.html
@@ -96,8 +96,8 @@
     <footer>
         <div class="foot-container" id="footer">
             <a href="mailto:dhavalverma@live.com" class="email-lnk link">Contact me</a>
-            <p>© <span id="year"></span> All rights reserved. Dhaval Verma
-                <!--<a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval Verma</a>. -->
+            <p>© <span id="year"></span> All rights reserved. 
+                <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval Verma</a>.
             </p>
         </div>
     </footer>
