--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p>I am an Experienced developer with a demonstrated history of working in web development.
                     Skilled in HTML, CSS(+Sass), JavaScript, jQuery, Angular, Bootstrap, TailWind, Wordpress,
                     Wireframes, responsive designs and many more.
-                    <br><br> I have a passion for web development and love to create for web.
+                    <br><br> I have a passion for web development and love to create for it.
                 </p>
             </div>
             <hr>
