--- a/index.html
+++ b/index.html
@@ -57,36 +57,84 @@
             <h2>What I can do</h2>
 
             <div id="images">
-                <h4>--------LANGUAGES--------</h4>
+                <h4>-------- LANGUAGES  --------</h4>
                 <div class="flex-container">
-                    <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
-                    <img title="Css" src="images/css.png" class="icons" alt="Css">
-                    <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
+                    <div class="iconBox">
+                        <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
+                        <!-- <span class="iconText">Html</span> -->
+                    </div>
+                    <div class="iconBox">
+                        <img title="Css" src="images/css.png" class="icons" alt="Css">
+                        <!-- <span class="iconText">Css</span> -->
+                    </div>
+                    <div class="iconBox">
+                        <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
+                        <!-- <span class="iconText">Javascript</span> -->
+                    </div>
                 </div>
-                <h4>--------FRAMEWORKS & LIBRARIES--------</h4>
+                <h4>-------- FRAMEWORKS & LIBRARIES --------</h4>
                 <div class="flex-container">
-                    <img title="Angular" src="images/angular.png" class="icons" alt="Angular">
-                    <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
-                    <img title="Sass" src="images/sass.png" class="icons" alt="Sass">
-                    <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
-                    <img title="TailWind" src="images/tWind.png" class="icons" alt="TailWind">
+                    <div class="iconBox">
+                        <img title="Angular" src="images/angular.png" class="icons" alt="Angular">
+                        <span class="iconText">Angular</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
+                        <!-- <span class="iconText">jQuery</span> -->
+                    </div>
+                    <div class="iconBox">
+                        <img title="Sass" src="images/sass.png" class="icons" alt="Sass">
+                        <!-- <span class="iconText">Sass</span> -->
+                    </div>
+                    <div class="iconBox">
+                        <img title="Bootstrap" src="images/bstrap.png" class="icons" alt="Bootstrap">
+                        <span class="iconText">Bootstrap</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="TailWind" src="images/tWind.png" class="icons" alt="TailWind">
+                        <span class="iconText">TailWind</span>
+                    </div>
                 </div>
-                <h4>--------CMS--------</h4>
+                <h4>-------- CMS --------</h4>
                 <div class="flex-container">
-                    <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="Wordpress">
-                    <img title="Shopify" src="images/shopify.svg" class="icons" alt="Shopify">
-                    <img title="SquareSpace" src="images/squarespace.png" class="icons" alt="SquareSpace">
+                    <div class="iconBox">
+                        <img title="Wordpress" src="images/WordPress_blue_logo.svg" class="icons" alt="Wordpress">
+                        <span class="iconText">Wordpress</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="Shopify" src="images/shopify.svg" class="icons" alt="Shopify">
+                        <span class="iconText">Shopify</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="SquareSpace" src="images/squarespace.png" class="icons" alt="SquareSpace">
+                        <!-- <span class="iconText">SquareSpace</span> -->
+                    </div>
                 </div>
-                <h4>--------DIGITAL MARKETING--------</h4>
+                <h4>-------- DIGITAL MARKETING --------</h4>
                 <div class="flex-container">
-                    <img title="Analytics" src="images/analytics.png" class="icons" alt="Analytics">
-                    <img title="TagManager" src="images/gtm.png" class="icons" alt="Tagmanager">
+                    <div class="iconBox">
+                        <img title="Analytics" src="images/analytics.png" class="icons" alt="Analytics">
+                        <!-- <span class="iconText">Analytics</span> -->
+                    </div>
+                    <div class="iconBox">
+                        <img title="TagManager" src="images/gtm.png" class="icons" alt="Tagmanager">
+                        <!-- <span class="iconText">Tagmanager</span> -->
+                    </div>
                 </div>
-                <h4>--------OTHER SKILLS--------</h4>
+                <h4>-------- OTHER SKILLS --------</h4>
                 <div class="flex-container">
-                    <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
-                    <img title="Photoshop" src="images/ps.png" class="icons" alt="Photoshop">
-                    <img title="XD" src="images/xd.png" class="icons" alt="XD">
+                    <div class="iconBox">
+                        <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
+                        <!-- <span class="iconText">Firebase</span> -->
+                    </div>
+                    <div class="iconBox">
+                        <img title="Photoshop" src="images/ps.png" class="icons" alt="Photoshop">
+                        <span class="iconText">Photoshop</span>
+                    </div>
+                    <div class="iconBox">
+                        <img title="XD" src="images/xd.png" class="icons" alt="XD">
+                        <span class="iconText">XD</span>
+                    </div>
                 </div>
 
             </div>
