--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <h2>What I can do</h2>
 
             <div id="images">
-                <h4>-------- LANGUAGES  --------</h4>
+                <h4>-------- LANGUAGES --------</h4>
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Html" src="images/html.png" class="tooltip icons" alt="Html">
@@ -140,13 +140,37 @@
             </div>
         </div>
 
+        <div class="post-bottom-container">
+            <h2>Wanna know more about me..</h2>
+
+            <div id="images">
+                <div class="flex-container">
+                    <div class="iconBox">
+                        <img title="Space Nerd 🌠" src="images/space.png" class="icons" alt="Space Nerd">
+                    </div>
+                    <div class="iconBox">
+                        <img title="Hardcore Gamer 😎" src="images/game-controller.png" class="tooltip icons" alt="Hardcore Gamer😎">
+                    </div>
+                </div>
+            </div>
+        </div>
+
     </section>
     <footer>
         <div class="foot-container" id="footer">
             <a href="mailto:dhavalverma@live.com" class="email-lnk link">Contact me</a>
-            <p>© <span id="year"></span> All rights reserved. 
-                <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval Verma</a>.
+            <p>© <span id="year"></span> All rights reserved.
+                <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval
+                    Verma</a>.
             </p>
+        </div>
+
+        <div class="hide">
+            <p>Clever enough!!......Here are the attributes.</p>
+            <a href="https://www.flaticon.com/free-icons/project" title="project icons">Project icons created by Freepik
+                - Flaticon</a>
+            <a href="https://www.flaticon.com/free-icons/gamepad" title="gamepad icons">Gamepad icons created by
+                Smashicons - Flaticon</a>
         </div>
     </footer>
 
