--- a/index.html
+++ b/index.html
@@ -141,12 +141,15 @@
         </div>
 
         <div class="post-bottom-container">
-            <h2>Wanna know more about me..</h2>
+            <h2>Xtra Curricular</h2>
 
             <div id="images">
                 <div class="flex-container">
                     <div class="iconBox">
                         <img title="Space Nerd 🌠" src="images/space.png" class="icons" alt="Space Nerd">
+                    </div>
+                    <div class="iconBox">
+                        <img title="Hiking" src="images/hiking.png" class="icons" alt="Hiking">
                     </div>
                     <div class="iconBox">
                         <img title="Hardcore Gamer 😎" src="images/game-controller.png" class="tooltip icons" alt="Hardcore Gamer😎">
