--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
         <div class="foot-container" id="footer">
             <a href="mailto:dhavalverma@live.com" class="email-lnk link">Contact me</a>
             <p>© <span id="year"></span> All rights reserved.
-                <a href="https://www.linkedin.com/in/dhaval-verma-919b66b9/" class="glow" target="_blank">Dhaval
+                <a href="#" class="glow" target="_blank">Dhaval
                     Verma</a>.
             </p>
         </div>
