updates project page

--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <header class="head-container">
         <div id="nav-bar">
             <a class="link" href="#about">About</a>
-            <div class="dropdown link"><span>Projects</span>
+            <a class="link" href="/projects.html">Projects</a>
+            <!-- <div class="dropdown link"><span>Projects</span>
                 <div class="dropdown-content">
                     <a href="https://www.optionmatrix.com/" target="_blank">Option Matrix</a>
                     <a href="https://ricsmagroup.com/" target="_blank">Ricsmagroup</a>
@@ -28,7 +29,7 @@
                     <a href="https://dhavalv3rma.github.io/frontlab/" target="_blank">Frontlab</a>
                     <a href="https://dhavalv3rma.github.io/tictactoe/" target="_blank">Tictactoe</a>
                 </div>
-            </div>
+            </div> -->
             <a class="link" href="#footer">Contact</a>
         </div>
     </header>
