--- a/projects.html
+++ b/projects.html
@@ -16,9 +16,9 @@
 <body>
     <header class="head-container">
         <div id="nav-bar">
-            <a class="link"  href="/index.html">Home</a>
-            <a class="link"  href="/index.html#about">About</a>
-            <a class="link"  href="/projects">Projects</a>
+            <a class="link"  href="index.html">Home</a>
+            <a class="link"  href="index.html#about">About</a>
+            <a class="link"  href="projects">Projects</a>
             <a class="link"  href="#footer">Contact</a>
         </div>
     </header>
