--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="head-container">
         <div id="nav-bar">
             <a class="link" href="#about">About</a>
-            <a class="link" href="intro/projects.html">Projects</a>
+            <a class="link" href="/projects.html">Projects</a>
             <!-- <div class="dropdown link"><span>Projects</span>
                 <div class="dropdown-content">
                     <a href="https://www.optionmatrix.com/" target="_blank">Option Matrix</a>
