--- a/projects.html
+++ b/projects.html
@@ -18,7 +18,7 @@
         <div id="nav-bar">
             <a class="link"  href="intro/">Home</a>
             <a class="link"  href="intro#about">About</a>
-            <a class="link"  href="intro/projects">Projects</a>
+            <a class="link"  href="#">Projects</a>
             <a class="link"  href="intro#footer">Contact</a>
         </div>
     </header>
