--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
                         <span class="iconText">Angular</span>
                     </div>
                     <div class="iconBox">
+                        <img title="React" src="images/react.png" class="icons" alt="React">
+                        <span class="iconText">React</span>
+                    </div>
+                    <div class="iconBox">
                         <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
                         <!-- <span class="iconText">jQuery</span> -->
                     </div>
