--- a/projects.html
+++ b/projects.html
@@ -16,10 +16,10 @@
 <body>
     <header class="head-container">
         <div id="nav-bar">
-            <a class="link"  href="intro/">Home</a>
-            <a class="link"  href="intro#about">About</a>
+            <a class="link"  href="index.html">Home</a>
+            <a class="link"  href="index.html#about">About</a>
             <a class="link"  href="#">Projects</a>
-            <a class="link"  href="intro#footer">Contact</a>
+            <a class="link"  href="index.html#footer">Contact</a>
         </div>
     </header>
 
