--- a/projects.html
+++ b/projects.html
@@ -39,6 +39,7 @@
                     <img title="Css" src="images/css.png" class="icons" alt="Css">
                     <img title="Javascript" src="images/js.png" class="icons" alt="Javascript">
                     <img title="jQuery" src="images/jq.png" class="icons" alt="jQuery">
+                    <img title="React" src="images/react.png" class="icons" alt="React">
                     <img title="Firebase" src="images/firebase.png" class="icons" alt="Firebase">
                 </div>
 
