--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/fav.ico">
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento&display=swap"
-        rel="stylesheet">
+          rel="stylesheet">
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
 </head>
 
@@ -45,9 +45,12 @@
             <img class="user_pic " src="images/dt.png" alt="dhaval_image">
             <h2>Hi</h2>
             <div class="insight">
-                <p>I am an Experienced developer with a demonstrated history of working in web development.
-                    Skilled in HTML, CSS(+Sass), JavaScript, jQuery, Angular, Bootstrap, TailWind, Wordpress,
-                    Wireframes, responsive designs and many more.
+                <p>Experienced Frontend Developer with a proven track record and expertise in creating seamless UI experience with Responsive designs, DOM manipulation, speed
+                    optimizations and efficient debugging and deployment practices. Strong IT professional with
+                    extensive experience in building and maintaining robust front-end applications and RESTful services.
+                    <br> <br>
+                    Skilled in HTML, CSS, JavaScript/TypeScript, jQuery, Bootstrap, Tailwind, Angular 14+, React 18+,
+                    Jest, MySQL, Postman, Azure, and Figma, among others.
                     <br><br> I have a passion for web development and love to create for it.
                 </p>
             </div>
@@ -157,7 +160,8 @@
                         <img title="Hiking" src="images/hiking.png" class="icons" alt="Hiking">
                     </div>
                     <div class="iconBox">
-                        <img title="Hardcore Gamer 😎" src="images/game-controller.png" class="tooltip icons" alt="Hardcore Gamer😎">
+                        <img title="Hardcore Gamer 😎" src="images/game-controller.png" class="tooltip icons"
+                             alt="Hardcore Gamer😎">
                     </div>
                 </div>
             </div>
@@ -183,7 +187,7 @@
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.3.1.min.js"
-        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+            integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 
     <script>
